--- a/advent-of-code-2018-dotnet/advent-of-code-2018-dotnet.csproj
+++ b/advent-of-code-2018-dotnet/advent-of-code-2018-dotnet.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RootNamespace>advent_of_code_2018</RootNamespace>
+    <RootNamespace>advent_of_code_2018_dotnet</RootNamespace>
   </PropertyGroup>
 
 </Project>
